# rust-opensubtitles

./: Cargo.toml  README.md
src/: client.rs  file_utils.rs  hash.rs  lib.rs  main.rs
